crates/carta/tests/snapshots/golden_writer__native__table__table-short-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Table
    ( "" , [] , [] )
    (Caption
       (Just [ Str "Short" , Space , Str "form" ])
       [ Plain
           [ Str "The"
           , Space
           , Str "full"
           , Space
           , Str "caption"
           , Space
           , Str "text"
           ]
       ])
    [ ( AlignDefault , ColWidthDefault ) ]
    (TableHead
       ( "" , [] , [] )
       [ Row
           ( "" , [] , [] )
           [ Cell
               ( "" , [] , [] )
               AlignDefault
               (RowSpan 1)
               (ColSpan 1)
               [ Plain [ Str "h" ] ]
           ]
       ])
    [ TableBody
        ( "" , [] , [] )
        (RowHeadColumns 0)
        []
        [ Row
            ( "" , [] , [] )
            [ Cell
                ( "" , [] , [] )
                AlignDefault
                (RowSpan 1)
                (ColSpan 1)
                [ Plain [ Str "v" ] ]
            ]
        ]
    ]
    (TableFoot ( "" , [] , [] ) [])
]
